tests/snapshots/execution_spec__test-const.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  hello: String @const(data: "Hello from server")
}
