tests/snapshots/execution_spec__test-expr-concat.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  concat: [Int] @expr(body: {concat: [{const: [1, 2]}, {const: [3, 4]}]})
}
