tests/snapshots/execution_spec__test-expr-success.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

scalar PhoneNumber

type Post {
  content: String
  id: Int!
}

type Query {
  cond: Post
  greeting: String
  news(news: NewsInput!): News!
  post(id: Int!): Post
}

scalar Url

schema {
  query: Query
}
