tests/snapshots/execution_spec__test-nested-link.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

enum Foo {
  BAR
  BAZ
}

scalar JSON

scalar PhoneNumber

type Post {
  id: Int!
  user: User
  userId: Int!
}

type Query {
  foo: Foo
  post(id: Int!): Post
}

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
